// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectFilter /> should not render the component with quick selection option if multiple selection is disabled 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      Item
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search items..."
        type="text"
        value=""
      />
    </h6>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-9"
        >
          <input
            class="input"
            id="checkbox-9"
            name="checkbox-9"
            type="checkbox"
          />
          <span
            id="label-tooltip-10"
          >
            Api
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-11"
        >
          <input
            class="input"
            id="checkbox-11"
            name="checkbox-11"
            type="checkbox"
          />
          <span
            id="label-tooltip-12"
          >
            Chat
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-13"
        >
          <input
            class="input"
            id="checkbox-13"
            name="checkbox-13"
            type="checkbox"
          />
          <span
            id="label-tooltip-14"
          >
            Email
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectFilter /> should render the component with items having icons 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      All items
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search items..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="_label_e6rgs_141 label quickSelectionOption"
          for="checkbox-15"
        >
          <input
            class="input"
            id="checkbox-15"
            name="checkbox-15"
            type="checkbox"
          />
          Select all
          <div
            class="badge"
          >
            3
          </div>
        </label>
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-16"
        >
          <input
            class="input"
            id="checkbox-16"
            name="checkbox-16"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            api
          </i>
          <span
            id="label-tooltip-17"
          >
            Api
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-18"
        >
          <input
            class="input"
            id="checkbox-18"
            name="checkbox-18"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            chat
          </i>
          <span
            id="label-tooltip-19"
          >
            Chat
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-20"
        >
          <input
            class="input"
            id="checkbox-20"
            name="checkbox-20"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            email
          </i>
          <span
            id="label-tooltip-21"
          >
            Email
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectFilter /> should render the component with selectable items 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      All items
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search items..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="_label_e6rgs_141 label quickSelectionOption"
          for="checkbox-2"
        >
          <input
            class="input"
            id="checkbox-2"
            name="checkbox-2"
            type="checkbox"
          />
          Select all
          <div
            class="badge"
          >
            3
          </div>
        </label>
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-3"
        >
          <input
            class="input"
            id="checkbox-3"
            name="checkbox-3"
            type="checkbox"
          />
          <span
            id="label-tooltip-4"
          >
            Api
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-5"
        >
          <input
            class="input"
            id="checkbox-5"
            name="checkbox-5"
            type="checkbox"
          />
          <span
            id="label-tooltip-6"
          >
            Chat
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-7"
        >
          <input
            class="input"
            id="checkbox-7"
            name="checkbox-7"
            type="checkbox"
          />
          <span
            id="label-tooltip-8"
          >
            Email
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectFilter /> should render the component with selected items 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      2 items
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search items..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="_label_e6rgs_141 label quickSelectionOption"
          for="checkbox-22"
        >
          <input
            checked=""
            class="input"
            id="checkbox-22"
            name="checkbox-22"
            type="checkbox"
          />
          Deselect all
          <div
            class="badge badge--unselect"
          >
            2
          </div>
        </label>
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-23"
        >
          <input
            checked=""
            class="input"
            id="checkbox-23"
            name="checkbox-23"
            type="checkbox"
          />
          <span
            id="label-tooltip-24"
          >
            Api
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-25"
        >
          <input
            checked=""
            class="input"
            id="checkbox-25"
            name="checkbox-25"
            type="checkbox"
          />
          <span
            id="label-tooltip-26"
          >
            Chat
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-27"
        >
          <input
            class="input"
            id="checkbox-27"
            name="checkbox-27"
            type="checkbox"
          />
          <span
            id="label-tooltip-28"
          >
            Email
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectFilter /> should render the component without any item 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      All items
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search items..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="_label_e6rgs_141 label quickSelectionOption"
          for="checkbox-1"
        >
          <input
            class="input"
            id="checkbox-1"
            name="checkbox-1"
            type="checkbox"
          />
          Select all
          <div
            class="badge"
          >
            0
          </div>
        </label>
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    />
  </div>
</div>
`;

exports[`<SelectFilter /> with groups should render the component with groups 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      All items
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search items..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="_label_e6rgs_141 label quickSelectionOption"
          for="checkbox-63"
        >
          <input
            class="input"
            id="checkbox-63"
            name="checkbox-63"
            type="checkbox"
          />
          Select all
          <div
            class="badge"
          >
            3
          </div>
        </label>
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-64"
        >
          <input
            class="input"
            id="checkbox-64"
            name="checkbox-64"
            type="checkbox"
          />
          <span
            id="label-tooltip-65"
          >
            Api
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-66"
        >
          <input
            class="input"
            id="checkbox-66"
            name="checkbox-66"
            type="checkbox"
          />
          <span
            id="label-tooltip-67"
          >
            Chat
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-68"
        >
          <input
            class="input"
            id="checkbox-68"
            name="checkbox-68"
            type="checkbox"
          />
          <span
            id="label-tooltip-69"
          >
            Email
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-70"
        >
          <input
            class="input"
            id="checkbox-70"
            name="checkbox-70"
            type="checkbox"
          />
          <span
            id="label-tooltip-71"
          >
            Group 1
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-72"
        >
          <input
            class="input"
            id="checkbox-72"
            name="checkbox-72"
            type="checkbox"
          />
          <span
            id="label-tooltip-73"
          >
            Group 2
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="_label_e6rgs_141 label labelItem"
          for="checkbox-74"
        >
          <input
            class="input"
            id="checkbox-74"
            name="checkbox-74"
            type="checkbox"
          />
          <span
            id="label-tooltip-75"
          >
            Group 3
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;
